--- a/backend/src/main/webapp/app/views/manage_notice/main.html
+++ b/backend/src/main/webapp/app/views/manage_notice/main.html
@@ -87,7 +87,7 @@
 								<tr>
 									<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 									
-									<th style="white-space: nowrap; text-align: center; color: #337AB7; padding: 0;" ng-style="group2 ? {'background-color': 'rgb(236, 207, 19)'} : ''">
+									<th style="white-space: nowrap; text-align: center; color: #337AB7; padding: 0;" ng-style="group2 ? {'background-color': 'rgb(236, 207, 19)'} : {'background-color': 'rgb(249, 242, 198)'}">
 										<button ng-show="group2" type="button" style="margin-bottom: 5px;" title="{{ isAllChk ? 'ล้างทั้งหมด' : 'เลือกทั้งหมด'}}" ng-click="trigerAllChk()">
 											<i class="fa fa-lg" style="color: #229954" ng-class="{'fa-square-o': !isAllChk, 'fa-check-square-o': isAllChk}"></i>
 										</button>
