--- a/backend/src/main/webapp/app/views/batch_notice/main.html
+++ b/backend/src/main/webapp/app/views/batch_notice/main.html
@@ -15,7 +15,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                	<i class="fa fa-list-alt fa-fw"></i> {{ titlePanel || 'Tool Menu' }}
+                	<i class="fa fa-list-alt fa-fw"></i> Batch Notice
                     <button type="button" class="btn btn-info btn-circle btn-lg" ng-show="isShowBack"
                     		style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
                     	<i class="fa fa-long-arrow-left"></i>
