--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -1,36 +1,36 @@
 <div class="row" style="margin-top: 15px;">
 	<div class="col-lg-4">
          <div class="panel panel-yellow">
-             <div class="panel-heading">กำลังเช็ค</div>
+             <div class="panel-heading">บัญชีที่กำลังเช็ค</div>
              <div class="panel-body">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
              </div>
-             <div class="panel-footer">
-                 Panel Footer
+             <div class="panel-footer" style="text-align: right;">
+                 	<span>จำนวน 10 บัญชี</span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
      </div>
      <div class="col-lg-4">
          <div class="panel panel-red">
-             <div class="panel-heading">ระบบ Login มีปัญหา</div>
+             <div class="panel-heading">บัญชีที่ไม่สามารถ Login ได้</div>
              <div class="panel-body">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
              </div>
-             <div class="panel-footer">
-               	<code>กรุณาตรวจสอบ Username และ Password</code>
+             <div class="panel-footer" style="text-align: center;">
+               	<code>กรุณาตรวจสอบ Username และ Password !!!</code>
              </div>
          </div>
          <!-- /.col-lg-4 -->
      </div>
      <div class="col-lg-4">
          <div class="panel panel-green">
-             <div class="panel-heading">บัญชีที่มีการจ่ายแล้ว</div>
+             <div class="panel-heading">บัญชีที่จ่ายแล้ว</div>
              <div class="panel-body">
                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt est vitae ultrices accumsan. Aliquam ornare lacus adipiscing, posuere lectus et, fringilla augue.</p>
              </div>
-             <div class="panel-footer">
-                 Panel Footer
+             <div class="panel-footer" style="text-align: right;">
+                 	<span>จำนวน 20 บัญชี</span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
