--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Payment Outcome</h1>
+			<h1 class="page-header">{{ (isShowPage || isDetailPage)? 'Payment Result' : 'นำเข้า Payment' }}</h1>
 		</div>
 	</div>
 	
@@ -19,7 +19,7 @@
 						</ul>			
 					</div>
 					<span class="pull-right" ng-show="group0  && !isDetailPage">{{ workingOnProduct.productName }}&nbsp&nbsp</span> -->
-					<button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isDetailPage">
+					<button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()" ng-show="isDetailPage && !isShowPage">
                     	<i class="fa fa-long-arrow-left"></i>
                     </button>
                 </div>
