--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -29,6 +29,15 @@
 	            <input type="radio" name="noticeFramework" value="2" ng-checked="data.noticeFramework == 2" ng-model="data.noticeFramework">JasperReport
 	        </label>
         </div>
+        <div class="form-group" ng-show="group0">
+	        <label>Payment Online Checking(กยส.) &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="pocModule" value="1" ng-checked="data.pocModule == 1" ng-model="data.pocModule">{{'user.addpage.status.enable' | translate}}
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="pocModule" value="0" ng-checked="data.pocModule == 0" ng-model="data.pocModule">{{'user.addpage.status.disable' | translate}}
+	        </label>
+        </div>
 		<div style="text-align: center;">
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
