--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -1,5 +1,5 @@
 <div class="row" style="margin-top: 15px;">
-     <div class="col-lg-4 col-lg-offset-2">
+     <div class="col-md-4 col-md-offset-2">
          <div class="panel panel-green">
              <div class="panel-heading">บัญชีที่จ่าย</div>
              <div class="panel-body">
@@ -11,7 +11,7 @@
          </div>
          <!-- /.col-lg-4 -->
      </div>
-     <div class="col-lg-4">
+     <div class="col-md-4">
          <div class="panel panel-red">
              <div class="panel-heading">บัญชีที่ไม่มีการจ่าย</div>
              <div class="panel-body">
