--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -1,5 +1,5 @@
 <div class="row" style="margin-top: 15px;">
-	<div class="col-lg-4">
+	<div class="col-md-4">
          <div class="panel panel-yellow">
              <div class="panel-heading">บัญชีที่กำลังเช็ค</div>
              <div class="panel-body">
@@ -11,7 +11,7 @@
          </div>
          <!-- /.col-lg-4 -->
      </div>
-     <div class="col-lg-4">
+     <div class="col-md-4">
          <div class="panel panel-red">
              <div class="panel-heading">บัญชีที่ไม่สามารถ Login ได้</div>
              <div class="panel-body">
@@ -23,7 +23,7 @@
          </div>
          <!-- /.col-lg-4 -->
      </div>
-     <div class="col-lg-4">
+     <div class="col-md-4">
          <div class="panel panel-green">
              <div class="panel-heading">บัญชีที่จ่ายแล้ว</div>
              <div class="panel-body">
