--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -12,7 +12,7 @@
 </div>
 <div class="row" style="margin-top: 5px;">
      <div class="col-md-4">
-         <div class="panel panel-green">
+         <div class="panel panel-green" style="margin: 0;">
              <div class="panel-heading">บัญชีที่จ่าย</div>
              <div class="panel-body" style="padding: 3px;">
                  
@@ -58,6 +58,14 @@
          </div>
          <!-- /.col-lg-4 -->
      </div>
+     
+     
+     
+     
+     
+     
+     
+     
      <div class="col-md-4">
          <div class="panel panel-red">
              <div class="panel-heading">บัญชีที่ไม่มีการจ่าย</div>
@@ -105,4 +113,10 @@
          </div>
          <!-- /.col-lg-4 -->
      </div>
+     
+     
+     
+     
+     
+     
 </div>            
