--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -128,7 +128,7 @@
 		  		<i class="fa fa-hand-o-right fa-1x"></i>
 		  	</button>
 		
-			<span class="btn btn-outline" style="padding: 5px 20px 5px 20px; cursor: default; border-color: #969696; background-color: #C3C3C3">
+			<span class="btn btn-outline" style="padding: 5px 20px 5px 20px; cursor: default; border-color: #5499C7;">
 				&nbsp;
 				<!-- <i class="fa fa-bolt fa-1x"></i> -->
 			</span>
