--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -1,7 +1,7 @@
-<div class="row" style="margin-top: 15px;">
+<div class="row" style="margin-top: 3px;">
 	<div class="col-md-4">
-         <div class="panel panel-yellow">
-             <div class="panel-heading">บัญชีที่กำลังเช็ค</div>
+         <div class="panel panel-yellow" style="margin: 0;">
+             <div class="panel-heading">บัญชีที่กำลังเช็ค <i class="fa fa-refresh fa-spin fa-fw"></i></div>
              <div class="panel-body" style="padding: 3px;">
                  
                  <div class="table-responsive">
@@ -39,14 +39,28 @@
                  
                  
              </div>
-             <div class="panel-footer" style="text-align: right;">
-                 	<span>จำนวน 10 บัญชี</span>
+             <div class="panel-footer" style="text-align: right; position: relative;">
+                 	<span><small>จำนวน 10 บัญชี</small></span>
+                 	
+                 	<!-- <div class="row form-inline"> -->
+           			  <div class="col-xs-8" style="position: absolute; left: 0; top: 3px;">
+						<form ng-submit="addContractNo()">
+				            <div class="input-group">
+								    <input type="text" id="dateFrom_traceCount" placeholder="เลขที่สัญญา" class="form-control" ng-model="formCheckingData.contractNo">
+								  	<span class="input-group-btn">
+								        <button class="btn btn-warning" type="submit">เพิ่ม</button>
+								    </span>
+							</div>
+						</form>
+					<!-- </div> -->
+             	</div>
+                 	
              </div>
          </div>
          <!-- /.col-lg-4 -->
      </div>
      <div class="col-md-4">
-         <div class="panel panel-red">
+         <div class="panel panel-red" style="margin: 0;">
              <div class="panel-heading">บัญชีที่ไม่สามารถ Login ได้</div>
              <div class="panel-body" style="padding: 3px;">
                  
@@ -93,7 +107,7 @@
          <!-- /.col-lg-4 -->
      </div>
      <div class="col-md-4">
-         <div class="panel panel-green">
+         <div class="panel panel-green" style="margin: 0;">
              <div class="panel-heading">บัญชีที่จ่ายแล้ว</div>
              <div class="panel-body" style="padding: 3px;">
                  
@@ -134,7 +148,7 @@
                  
              </div>
              <div class="panel-footer" style="text-align: right;">
-                 	<span>จำนวน 20 บัญชี</span>
+                 	<span><small>จำนวน 20 บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
