--- a/backend/src/main/webapp/app/views/pay_online_checking/load_data.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/load_data.html
@@ -98,7 +98,7 @@
 				<td>{{ data.rowNum | number:0 }}</td>		
 				<td>{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 				<td>
-					<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data.id)"></i>&emsp; 
+					<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteItem(data['_id'])"></i>&emsp; 
 				</td>
 			</tr>
 		</tbody>
