--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -108,7 +108,7 @@
      </div>
      <div class="col-md-4">
          <div class="panel panel-green" style="margin: 0;">
-             <div class="panel-heading">บัญชีที่จ่ายแล้ว</div>
+             <div class="panel-heading">บัญชีที่จ่ายล่าสุด</div>
              <div class="panel-body" style="padding: 3px;">
                  
                  
