--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -12,24 +12,16 @@
 								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
-								<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
-										{{ h.columnNameAlias || h.columnName }}
-								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
-									   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
-									}}
-								</td>
-								<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-									{{ 
-									   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
+									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
+									   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
+									   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
 									}}
 								</td>
 							</tr>
