--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -28,11 +28,9 @@
 						</tbody>
 					</table>
 				</div>
-                 
-                 
              </div>
              <div class="panel-footer" style="text-align: right; position: relative;">
-                 	<span><small>จำนวน 10 บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList.length }} บัญชี</small></span>
                  	
                  	<!-- <div class="row form-inline"> -->
            			  <div class="col-xs-8" style="position: absolute; left: 0; top: 3px;">
