--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -4,13 +4,10 @@
              <div class="panel-heading">บัญชีที่จ่าย
              	<div class="row form-inline">
              		<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 6px; top: 6px;">
-			            <div class="input-group">
+			            <div class="input-group pull-right">
 						  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-						    <input type="text" id="dateFrom_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-						    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange()" my-datepicker="dateConf">
-						    <span class="input-group-addon">ถึง</span>
-						    <input type="text" id="dateTo_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-						    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="dateToChange()" my-datepicker="dateConf">
+						    <input type="text" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
+						    	   ng-model="formData.date" ng-change="dateChange()" my-datepicker="dateConf">
 						</div>
 					</div>
              	</div>
@@ -21,27 +18,19 @@
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
-										{{ h.columnNameAlias || h.columnName }}
-								</th>
-								<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_his_3" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
-									   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
-									}}
-								</td>
-								<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-									{{ 
-									   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
+									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
+									   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
+									   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
 									}}
 								</td>
 							</tr>
@@ -50,7 +39,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right;">
-                 	<span><small>จำนวน 20 บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_his_3.length }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
@@ -61,50 +50,38 @@
              <div class="panel-heading">บัญชีที่ไม่มีการจ่าย
              	<div class="pull-right">
              		<small>
-             			{{ formData.dateFrom ? 'ตั้งแต่':'' }} {{ formData.dateFrom | date:'dd/MM/yyyy' }} {{ formData.dateTo ? 'ถึง':'' }} {{ formData.dateTo | date:'dd/MM/yyyy' }}
+             			วันที่ {{ formData.date | date:'dd/MM/yyyy' }}
              		</small>
              	</div>
              </div>
              <div class="panel-body" style="padding: 3px;">
-                 
-                 
                  <div class="table-responsive">
 					<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
-										{{ h.columnNameAlias || h.columnName }}
-								</th>
-								<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_his_1" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
-									   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
-									}}
-								</td>
-								<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-									{{ 
-									   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
+									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
+									   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
+									   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
 									}}
 								</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
-                 
-                 
              </div>
              <div class="panel-footer" style="text-align: right;">
-               	<span><small>จำนวน 20 บัญชี</small></span>
+               	<span><small>จำนวน {{ checkList_his_1.length }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
