--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -9,14 +9,18 @@
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+								<th style="white-space: nowrap; text-align: center; color: #337AB7;"></th>
+								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in checkList track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_1" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+								<td style="vertical-align: middle; text-align: center;">
+									<i class="fa fa-times user-action-icon-danger" ng-click="deleteChkLstItem(data['_id'])" title="ลบ"></i>				
+								</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
 									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
@@ -30,7 +34,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right; position: relative;">
-                 	<span><small>จำนวน {{ checkList.length }} บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_1.length }} บัญชี</small></span>
                  	
                  	<!-- <div class="row form-inline"> -->
            			  <div class="col-xs-8" style="position: absolute; left: 0; top: 3px;">
@@ -60,27 +64,23 @@
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
-										{{ h.columnNameAlias || h.columnName }}
-								</th>
-								<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+								<th style="white-space: nowrap; text-align: center; color: #337AB7;"></th>
+								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_2" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+								<td style="vertical-align: middle; text-align: center;">
+									<i class="fa fa-times user-action-icon-danger" ng-click="deleteChkLstItem(data['_id'])" title="ลบ"></i>			
+								</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
-									   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
-									}}
-								</td>
-								<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-									{{ 
-									   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
+									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
+									   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
+									   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
 									}}
 								</td>
 							</tr>
@@ -100,45 +100,33 @@
          <div class="panel panel-green" style="margin: 0;">
              <div class="panel-heading">บัญชีที่จ่ายล่าสุด</div>
              <div class="panel-body" style="padding: 3px;">
-                 
-                 
                  <div class="table-responsive">
 					<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
-								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
-										{{ h.columnNameAlias || h.columnName }}
-								</th>
-								<th ng-repeat="h in taskDetailHeaders" style="white-space: nowrap; text-align: center; color: #337AB7; padding-left: 30px; padding-right: 30px;">
+								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in paymentDetails track by $index" ng-class="{'comm-row-selected': data.selected}" ng-mousedown="rowSelect(data, $index, $event)" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_3" style="color: #337AB7;">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
-									   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
-									}}
-								</td>
-								<td ng-repeat="h in taskDetailHeaders" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
-									{{ 
-									   h.dataType == 'date' ? (data.taskDetail[h.columnName] | date:gb_dateFormat) : 
-									   h.dataType == 'num' ? (data.taskDetail[h.columnName] | number:2) : data.taskDetail[h.columnName] 
+									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
+									   h.dataType == 'sys_owner' ? data.taskDetailFull[h.columnName][0].showname : 
+									   h.dataType == 'num' ? (data.taskDetailFull[h.columnName] | number:2) : data.taskDetailFull[h.columnName] 
 									}}
 								</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
-                 
-                 
              </div>
              <div class="panel-footer" style="text-align: right;">
-                 	<span><small>จำนวน 20 บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_3.length }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
