--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -33,7 +33,7 @@
 				  
 				  
 				  
-				  <div class="pull-right">
+				  <div class="pull-right" ng-show="group2">
 				  	  <div class="dropdown pull-right">
 					      <button class="btn btn-outline btn-primary" type="button" ng-click="exportResult()">
 					        <i class="fa fa-download"></i> Export
