--- a/backend/src/main/webapp/app/views/pay_online_checking/main.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/main.html
@@ -27,7 +27,7 @@
 					<ul class="nav nav-tabs" id="myTabs">
 					    <li role="presentation" class="active"><a href="#checking" data-toggle="tab">แสดงข้อมูการเช็ค [วันนี้]</a></li>
 					    <li role="presentation"><a href="#history" data-toggle="tab">แสดงข้อมูลการเช็ค [ย้อนหลัง]</a></li>
-					    <li role="presentation"><a href="#upload" data-toggle="tab">นำเข้าข้อมูล</a></li>
+					    <li role="presentation"><a href="#upload" data-toggle="tab" ng-show="group2">นำเข้าข้อมูล</a></li>
 				  	</ul>
 				  	
 					<!-- Tab panes -->
