--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -34,7 +34,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right; position: relative;">
-                 	<span><small>จำนวน {{ checkList_1.length }} บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_1.length || 0 }} บัญชี</small></span>
                  	
                  	<!-- <div class="row form-inline"> -->
            			  <div class="col-xs-8" style="position: absolute; left: 0; top: 3px;">
@@ -126,7 +126,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right;">
-                 	<span><small>จำนวน {{ checkList_3.length }} บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_3.length || 0 }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
