--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -39,7 +39,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right;">
-                 	<span><small>จำนวน {{ checkList_his_3.length }} บัญชี</small></span>
+                 	<span><small>จำนวน {{ checkList_his_3.length || 0 }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
@@ -81,7 +81,7 @@
 				</div>
              </div>
              <div class="panel-footer" style="text-align: right;">
-               	<span><small>จำนวน {{ checkList_his_1.length }} บัญชี</small></span>
+               	<span><small>จำนวน {{ checkList_his_1.length || 0 }} บัญชี</small></span>
              </div>
          </div>
          <!-- /.col-lg-4 -->
