--- a/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_history_info.html
@@ -24,7 +24,7 @@
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in checkList_his_3" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_his_3" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
@@ -66,7 +66,7 @@
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in checkList_his_1" style="color: #337AB7;">
+							<tr ng-repeat="data in checkList_his_1" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
