--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -10,6 +10,7 @@
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;"></th>
+								<th style="white-space: nowrap; text-align: center; color: #337AB7;">เวลาเช็ค</th>
 								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
@@ -20,6 +21,9 @@
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td style="vertical-align: middle; text-align: center;">
 									<i class="fa fa-times user-action-icon-danger" ng-click="deleteChkLstItem(data['_id'])" title="ลบ"></i>				
+								</td>
+								<td style="vertical-align: middle; text-align: center;">
+									{{ data.sys_updatedDateTime | date:gb_timeFormat }}
 								</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
@@ -102,6 +106,7 @@
 						<thead>
 							<tr>
 								<th style="white-space: nowrap; text-align: center; color: #337AB7;">#</th>
+								<th style="white-space: nowrap; text-align: center; color: #337AB7;">เวลาจ่าย</th>
 								<th ng-repeat="h in headers" style="white-space: nowrap; text-align: center; color: #337AB7;">
 										{{ h.columnNameAlias || h.columnName }}
 								</th>
@@ -110,6 +115,9 @@
 						<tbody>
 							<tr ng-repeat="data in checkList_3" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
+								<td style="vertical-align: middle; text-align: center;">
+									{{ data.paidDateTime | date:gb_timeFormat }}
+								</td>
 								<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 									{{ 
 									   h.dataType == 'date' ? (data.taskDetailFull[h.columnName] | date:gb_dateFormat) : 
