--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -1,7 +1,7 @@
 <div class="row" style="margin-top: 3px;">
 	<div class="col-md-4">
          <div class="panel panel-yellow" style="margin: 0;">
-             <div class="panel-heading">บัญชีที่กำลังเช็ค <i class="fa fa-refresh fa-spin fa-fw"></i></div>
+             <div class="panel-heading">บัญชีที่กำลังเช็ค <i class="fa fa-refresh fa-fw" ng-class="{'fa-spin' : checkList_1.length}"></i></div>
              <div class="panel-body" style="padding: 3px;">
                  
                  <div class="table-responsive">
