--- a/backend/src/main/webapp/app/views/product/import_conf.html
+++ b/backend/src/main/webapp/app/views/product/import_conf.html
@@ -41,6 +41,7 @@
 			                    <input class="pull-left" title="เลขบัตรประชาชน" name="idCardNo" type="radio" ng-model="$parent.$parent.$parent.idCardNoColumnName" ng-change="updateColumnName('idCard')" ng-value="item.columnName">
 			                    <input class="pull-left" title="Balance" name="balance" type="radio" ng-model="$parent.$parent.$parent.balanceColumnName" ng-change="updateColumnName('balance')" ng-value="item.columnName">
 			                    <input class="pull-left" title="วันหมดอายุ" name="expirationDate" type="radio" ng-model="$parent.$parent.$parent.expirationDateColumnName" ng-change="updateColumnName('expirationDate')" ng-value="item.columnName">
+			                    <input class="pull-left" title="วันเดือนปีเกิด" name="birthDate" type="radio" ng-model="$parent.$parent.$parent.birthDateColumnName" ng-change="updateColumnName('birthDate')" ng-value="item.columnName">
 			                    <i class="fa fa-bars" style="cursor: pointer;" title="เลือกแบบฟอร์ม Notice" ng-show="item.isNotice" ng-click="noticeList(item)"></i>
 			                    <br />
 			                    
