--- a/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
+++ b/backend/src/main/webapp/app/views/pay_online_checking/check_info.html
@@ -17,7 +17,7 @@
 							</tr>
 						<thead>
 						<tbody>
-							<tr ng-repeat="data in checkList_1" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
+							<tr ng-repeat="data in checkList_1  | orderBy:'-sys_updatedDateTime'" style="color: #337AB7; cursor: pointer;" ng-click="goToTask(data.taskDetailFull['_id'])">
 								<td style="vertical-align: middle; text-align: center;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}</td>
 								<td style="vertical-align: middle; text-align: center;">
 									<i class="fa fa-times user-action-icon-danger" ng-click="deleteChkLstItem(data['_id'])" title="ลบ"></i>				
