--- a/backend/src/main/webapp/app/views/working/tab_trace.html
+++ b/backend/src/main/webapp/app/views/working/tab_trace.html
@@ -13,12 +13,12 @@
 </button> -->
 
 <div class="panel panel-info" style="margin: 0;" ng-style="askModalObj.isOldTrace ? {'border-color':'#EDBB99'} : {}">
-	<div class="alert alert-info form-group input-group" style="padding-top: 3px; padding-bottom: 3px; margin: 3px;" ng-style="askModalObj.isOldTrace ? {'background-color':'#F5CBA7'} : {}">
+	<div class="alert alert-info form-group input-group" style="position: relative; padding-top: 3px; padding-bottom: 3px; margin: 3px;" ng-style="askModalObj.isOldTrace ? {'background-color':'#F5CBA7'} : {}">
 		<span class="input-group-addon" style="border: 0px; background: none; color: #337AB7;">
 			{{'pagination.page' | translate}}: {{askModalObj.init.currentPage}} {{'pagination.of' | translate}} {{ numPages | number:0 }} ({{'pagination.total' | translate}} {{ askModalObj.init.traceData.totalItems | number:0 }} {{'pagination.items' | translate}})
 		</span>
 		
-		<div class="checkbox_animate" style="position: absolute; bottom: -3px;">
+		<div class="checkbox_animate" style="position: absolute; bottom: 1px;">
 			<label>
             	<input type="checkbox" value="" ng-model="askModalObj.isOldTrace" ng-change="askModalObj.trigerIsOldTrace()">
             	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
