######## Remove searchIds for fixed pagging feature

--- a/backend/src/main/webapp/app/views/taskdetail/main.html
+++ b/backend/src/main/webapp/app/views/taskdetail/main.html
@@ -65,7 +65,7 @@
 											  style="width: 180px;" nv-file-select="" uploader="uploader" title="แก้ใขข้อมูล/จ่ายงาน"
 											  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
 											  
-									  <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button>
+									  <!-- <button type="button" ng-click="showCollector2()" class="btn btn-outline btn-primary">จ่ายงาน/โอนงาน</button> -->
 								   </div>
 							   
 							   	</div>
