--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -18,22 +18,7 @@
 					    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 					  </div>
 					  
-					  <div class="checkbox">
-					    <label>
-					      <input type="checkbox" ng-model="formData.isPgs" ng-change="searchBtn()"> มี ปกส.
-					    </label>
-					  </div>
-					  <div class="checkbox">
-					    <label>
-					      <input type="checkbox" ng-model="formData.isNoTrace" ng-change="searchBtn()"> ยังไม่มีการติดตาม
-					    </label>
-					  </div>
-				   </div>
-			   </div>
-			   
-			   <div class="row" style="margin-top: 5px;">
-				   <div class="col-xs-12">			
-				   		<div class="input-group input-daterange">
+					  <div class="input-group input-daterange">
 						  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 						  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
 						  	        ng-options="option.col as option.text for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
@@ -46,8 +31,45 @@
 						    <input type="text" name="dateTo" class="form-control" 
 						    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
 						    	   style="width: 120px;" ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด">
+					  </div>
+					  
+					  
+				   </div>
+			   </div>
+			   
+			   <div class="row" style="margin-top: 5px;">
+				   <div class="col-xs-12">			
+				   		
+				   		<div class="form-group input-group">
+							<span class="input-group-addon">Code</span>
+							<div class="input-group">
+								<select name="codeName" class="form-control" ng-model="formData.codeName" ng-options="option.fieldName as option.name for option in dymList" ng-change="codeNameChange()">
+									<option value="">--Select--</option>
+						  		</select>
+								<div class="input-group-btn">
+							        <button ng-disabled="!codeGroups.length || codeGroups.length == 0" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">{{ selectedCodeName.groupSelected.name }} <span class="caret"></span></button>
+							        <ul class="dropdown-menu">
+							          <li ng-repeat="gp in codeGroups"><a href="" ng-click="changeGroup(gp)">{{ gp.name }}</a></li>
+							        </ul>
+								</div>	
+								<select ng-disabled="!selectedCodeName.dymListDet || selectedCodeName.dymListDet.length == 0" name="codeValue" class="form-control" ng-model="formData.codeValue" ng-options="option._id as (option.code ?  option.meaning + ' [' + option.code + ']' : option.meaning) for option in selectedCodeName.dymListDet" ng-change="searchBtn()">
+									<option value="">--Select--</option>
+						  		</select>
+					  		</div>
 						</div>
-						
+				   		
+				   		&nbsp;&nbsp;
+						  <div class="checkbox">
+						    <label>
+						      <input type="checkbox" ng-model="formData.isPgs" ng-change="searchBtn()"> มี ปกส.
+						    </label>
+						  </div>
+						  <div class="checkbox">
+						    <label>
+						      <input type="checkbox" ng-model="formData.isNoTrace" ng-change="searchBtn()"> ยังไม่มีการติดตาม
+						    </label>
+						  </div>
+				   		
 						&nbsp;&nbsp;
 						<button type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm(false)">{{'user.search.clear_btn' | translate}}</button>
 					    <button type="submit" class="btn btn-outline btn-primary">ค้นหา</button>
