--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -44,3 +44,16 @@
 		</div>
 	</form>
 </div>
+<div class="col-lg-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
+	<div class="panel panel-default">
+         <div class="panel-heading">
+             Payment Setting
+         </div>
+         <div class="panel-body">
+             <div class="form-group" ng-class="{'has-error':addUserForm.productName.$invalid}">
+				<label class="control-label">สูตรคำนวนค่า Balance</label>
+				<input name="productName" class="form-control">
+			</div>
+         </div>
+     </div>
+</div>
